tests/diagnostics/packages/import_usage/imported_function_return_type_mismatch/expect.txt
# exit: 1
lib.coppice:4:14: error: return type mismatch: expected string, got int64
      return id(1)
               ^
